@@ -1,3 +1,11 @@
+2005-09-14  Richard A. Stellingwerff  <remenic@gmail.com>
+
+	* engines/clearlooks/src/clearlooks_draw.c:
+	(clearlooks_draw_normal_arrow), (clearlooks_draw_combo_arrow),
+	(_clearlooks_draw_arrow), (clearlooks_draw_arrow):
+	* engines/clearlooks/src/clearlooks_style.c: (draw_shadow),
+	(draw_box), (draw_arrow): Fixed arrow drawing.
+
 2005-09-13  Richard A. Stellingwerff  <remenic@gmail.com>
 
 	* engines/clearlooks/src/clearlooks_draw.c:
